# Humanoid-Motion-and-Planning-

./: README.md
Inaaya/: CMakeLists.txt  package.xml
Inaaya/launch/: base_local_planner_params.yaml  configuration.launch  costmap_common_params.yaml  gazebo_map_robot.launch  gazebo_mapping_robot.launch  global_costmap_params.yaml  local_costmap_params.yaml  move_base.launch  navigation.rviz
Inaaya/msg/: odom_arduino.msg
Inaaya/src/: dummy_tick_publisher.cpp  odom_arduino.cpp  odomo_arduino_class.cpp  rough_class.cpp
Inaaya/urdf/: gen_test.urdf  robot1_base_04.xacro  test.xacro
